--- a/index.html
+++ b/index.html
@@ -72,21 +72,22 @@
         <img src="logomarca_chocomelk.png" alt="Chocomelk" class="logo-img">
         <h1 id="topo">Ovos de Páscoa Chocomelk</h1>
     </header>
+    
+<div class="vitrine-fotos">
+    <div class="carrossel-fotos">
+        <div class="foto-item" onclick="abrirZoom('foto1.jpg', 'Ovo de Colher Chocomelk')"><img src="foto1.jpg" alt="Foto"><div class="selo">Colher</div></div>
+        <div class="foto-item" onclick="abrirZoom('foto2.jpg', 'Ovo Trufado Especial')"><img src="foto2.jpg" alt="Foto"><div class="selo">Trufados</div></div>
+        <div class="foto-item" onclick="abrirZoom('foto3.jpg', 'Ovo Tradicional')"><img src="foto3.jpg" alt="Foto"><div class="selo">Tradicionais</div></div>
+        <div class="foto-item" onclick="abrirZoom('foto4.jpg', 'Nossas Trufas')"><img src="foto4.jpg" alt="Foto"><div class="selo">Trufas</div></div>
 
-    <div class="vitrine-fotos">
-        <div class="carrossel-fotos">
-            <div class="foto-item" onclick="abrirZoom('foto1.jpg', 'Ovo de Colher Chocomelk')"><img src="foto1.jpg" alt="Foto"><div class="selo">Colher</div></div>
-            <div class="foto-item" onclick="abrirZoom('foto2.jpg', 'Ovo Trufado Especial')"><img src="foto2.jpg" alt="Foto"><div class="selo">Trufados</div></div>
-            <div class="foto-item" onclick="abrirZoom('foto3.jpg', 'Ovo Tradicional')"><img src="foto3.jpg" alt="Foto"><div class="selo">Tradicionais</div></div>
-            <div class="foto-item" onclick="abrirZoom('foto4.jpg', 'Nossas Trufas')"><img src="foto4.jpg" alt="Foto"><div class="selo">Trufas</div></div>
+        <div class="foto-item">
+            <a href="https://ibb.co/svvWLF08">
+                <img src="https://i.ibb.co/999ZRqFQ/IMG-20250406-WA0029.jpg" alt="Nova Foto Chocomelk">
+            </a>
+            <div class="selo">Novidade</div>
         </div>
-    </div>
-
-    <div id="modalZoom" onclick="fecharZoom()">
-        <span class="btn-fechar">&times;</span>
-        <img id="imgZoom" src="">
-        <div id="legendaZoom"></div>
-    </div>
+        </div>
+</div>
 
     <h2>🍫 Ovos de Colher</h2>
     <div class="vitrine" id="listaColher"></div>
