--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="https://ibb.co/svvWLF08">
                 <img src="https://i.ibb.co/999ZRqFQ/IMG-20250406-WA0029.jpg" alt="Nova Foto Chocomelk">
             </a>
-            <div class="selo">Novidade</div>
+            <div class="selo">Ovo de Colher Morango</div>
         </div>
         </div>
 </div>
