--- a/index.html
+++ b/index.html
@@ -75,18 +75,30 @@
     
 <div class="vitrine-fotos">
     <div class="carrossel-fotos">
-        <div class="foto-item" onclick="abrirZoom('foto1.jpg', 'Ovo de Colher Chocomelk')"><img src="foto1.jpg" alt="Foto"><div class="selo">Colher</div></div>
-        <div class="foto-item" onclick="abrirZoom('foto2.jpg', 'Ovo Trufado Especial')"><img src="foto2.jpg" alt="Foto"><div class="selo">Trufados</div></div>
-        <div class="foto-item" onclick="abrirZoom('foto3.jpg', 'Ovo Tradicional')"><img src="foto3.jpg" alt="Foto"><div class="selo">Tradicionais</div></div>
-        <div class="foto-item" onclick="abrirZoom('foto4.jpg', 'Nossas Trufas')"><img src="foto4.jpg" alt="Foto"><div class="selo">Trufas</div></div>
-
-        <div class="foto-item">
-            <a href="https://ibb.co/svvWLF08">
-                <img src="https://i.ibb.co/999ZRqFQ/IMG-20250406-WA0029.jpg" alt="Nova Foto Chocomelk">
-            </a>
-            <div class="selo">Ovo de Colher Morango</div>
-        </div>
-        </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/XfjgqgyV/foto1.jpg', 'Ovo Chocomelk Especial')">
+        <img src="https://i.ibb.co/XfjgqgyV/foto1.jpg" alt="Foto"><div class="selo">Especial</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/RTZqtmrB/foto2.jpg', 'Ovo de Colher')">
+        <img src="https://i.ibb.co/RTZqtmrB/foto2.jpg" alt="Foto"><div class="selo">Colher</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/fG9qKD1F/foto3.jpg', 'Ovo Trufado')">
+        <img src="https://i.ibb.co/fG9qKD1F/foto3.jpg" alt="Foto"><div class="selo">Trufado</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/7N8bkw5r/foto4.jpg', 'Delícia de Páscoa')">
+        <img src="https://i.ibb.co/7N8bkw5r/foto4.jpg" alt="Foto"><div class="selo">Novidade</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/K8j6Fw1/foto5.jpg', 'Ovo Kids')">
+        <img src="https://i.ibb.co/K8j6Fw1/foto5.jpg" alt="Foto"><div class="selo">Kids</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/vxKTSbsS/foto6.jpg', 'Bombons Sortidos')">
+        <img src="https://i.ibb.co/vxKTSbsS/foto6.jpg" alt="Foto"><div class="selo">Bombons</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/jYKg1bb/foto7.jpg', 'Cesta de Páscoa')">
+        <img src="https://i.ibb.co/jYKg1bb/foto7.jpg" alt="Foto"><div class="selo">Cestas</div>
+    </div>
+    <div class="foto-item" onclick="abrirZoom('https://i.ibb.co/999ZRqFQ/IMG-20250406-WA0029.jpg', 'Ovo de Morango')">
+        <img src="https://i.ibb.co/999ZRqFQ/IMG-20250406-WA0029.jpg" alt="Foto"><div class="selo">Morango</div>
+    </div>
 </div>
 
     <h2>🍫 Ovos de Colher</h2>
